Align player modal styling and fix ascension overlay stacking

--- a/src/app/components/ascension-panel/ascension-panel.component.scss
+++ b/src/app/components/ascension-panel/ascension-panel.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 3000;
+  z-index: 2600;
 }
 
 .ascension-modal {
